# PokeMaze

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  MineMon.cbp  PokeMaze.cbp  PokeMaze.cbp.mak  README.md  cmake_install.cmake
.github/workflows/: ubuntu.yml  windows.yml
data/: player.obj.mtl
data/Ash_Ketchum/tmp/: Ash_Ketchum.obj.mtl
data/Charizard/: Charizard.obj.mtl
include/: IOUtils.hpp  SceneObject.hpp  collisions.hpp  matrices.h
include/game/: MineMon.hpp
include/pokemaze/: PokeMaze.hpp  SceneObject.hpp
include/pokemaze/controllers/: ErrorController.hpp  KeyboardController.hpp  MouseController.hpp
include/pokemaze/engine/: BMPProcessor.hpp  Collisions.hpp  Display.hpp  Engine.hpp  PNGProcessor.hpp  Renderer.hpp
include/pokemaze/engine/player/: Player.hpp  WavPlayer.hpp
include/pokemaze/engine/projection/: OrthographicProjection.hpp  PerspectiveProjection.hpp  Projection.hpp
include/pokemaze/engine/text/: TextRender.hpp
include/pokemaze/levels/: Level.hpp  Level1.hpp  Level2.hpp  Level3.hpp  LevelFactory.hpp
include/pokemaze/models/: BoundingBox.hpp  Point.hpp  SceneObject.hpp  Sphere.hpp
include/pokemaze/models/camera/: Camera.hpp  FixedCamera.hpp  FreeCamera.hpp  LookAtCamera.hpp
include/pokemaze/models/characters/: AshKetchum.hpp  Charizard.hpp  Pikachu.hpp
include/pokemaze/models/objects/: Pokeball.hpp  Tree.hpp  Wall.hpp
include/pokemaze/models/scene/: Floor.hpp  Garage.hpp  Sky.hpp
include/pokemaze/util/algebra/: Bezier.hpp  Matrices.hpp
include/pokemaze/util/io/: IOUtils.hpp
include/wniemiec/io/consolex/: Consolex.hpp  HistoryConsolex.hpp  InputConsolex.hpp  LogLevel.hpp  LogMessage.hpp  LoggerConsolex.hpp  OutputConsolex.hpp
include/wniemiec/util/data/: StringUtils.hpp
include/wniemiec/util/task/: Scheduler.hpp
lib/consolex/: CMakeLists.txt  Makefile  README.md  consolex[1]_include.cmake  consolex[1]_tests.cmake
lib/consolex/.github/workflows/: macos.yml  ubuntu.yml  windows.yml
lib/consolex/include/wniemiec/data/cpp/: StringUtils.hpp
lib/consolex/include/wniemiec/io/cpp/: Consolex.hpp  HistoryConsolex.hpp  InputConsolex.hpp  LogLevel.hpp  LogMessage.hpp  LoggerConsolex.hpp  OutputConsolex.hpp
lib/consolex/src/wniemiec/data/cpp/: StringUtils.cpp
lib/consolex/src/wniemiec/io/cpp/: Consolex.cpp  HistoryConsolex.cpp  InputConsolex.cpp  LogLevel.cpp  LogMessage.cpp  LoggerConsolex.cpp  OutputConsolex.cpp
lib/consolex/test/resources/auxfiles/: code-example.txt
lib/consolex/test/wniemiec/io/cpp/: ConsolexTest.cpp  ConsolexTest.hpp
lib/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/examples/: Makefile  cmake_install.cmake
lib/glfw/src/: Makefile  cmake_install.cmake
lib/glm/: Makefile  cmake_install.cmake
lib/glm/detail/: Makefile  cmake_install.cmake
lib/glm/ext/: Makefile  cmake_install.cmake
lib/glm/gtc/: Makefile  cmake_install.cmake
lib/glm/gtx/: Makefile  cmake_install.cmake
lib/glm/simd/: Makefile  cmake_install.cmake
lib/obj_loader/: glad.c  stb_image.h
lib/scheduler/: Makefile  scheduler[1]_include.cmake
lib/scheduler/src/wniemiec/task/cpp/: Scheduler.cpp
lib/tinyfiledialogs/: Makefile  cmake_install.cmake
src/: App.cpp  IOUtils.cpp  Matrices.cpp  SceneObject.cpp  collisions.cpp  main.cpp  shader_fragment.glsl  shader_vertex.glsl
src/engine/shaders/: shader_vertex.glsl
src/game/: MineMon.cpp
src/minemon/: main.cpp
src/pokemaze/: App.cpp  PokeMaze.cpp  SceneObject.cpp
src/pokemaze/controllers/: ErrorController.cpp  KeyboardController.cpp  MouseController.cpp
src/pokemaze/engine/: BMPProcessor.cpp  Collisions.cpp  Display.cpp  Engine.cpp  PNGProcessor.cpp  Renderer.cpp
src/pokemaze/engine/loader/: glad.c  stb_image.cpp  tiny_obj_loader.cpp
src/pokemaze/engine/player/: Player.cpp  WavPlayer.cpp
src/pokemaze/engine/projection/: OrthographicProjection.cpp  PerspectiveProjection.cpp  Projection.cpp
src/pokemaze/engine/shader/: fur_fragment.glsl  fur_vertex.glsl  shader_fragment.glsl  shader_vertex.glsl
src/pokemaze/engine/text/: TextRender.cpp
src/pokemaze/levels/: Level.cpp  Level1.cpp  Level2.cpp  Level3.cpp  LevelFactory.cpp
src/pokemaze/models/: BoundingBox.cpp  Point.cpp  SceneObject.cpp  Sphere.cpp
src/pokemaze/models/camera/: Camera.cpp  FixedCamera.cpp  FreeCamera.cpp  LookAtCamera.cpp
src/pokemaze/models/characters/: AshKetchum.cpp  Charizard.cpp  Pikachu.cpp
src/pokemaze/models/objects/: Pokeball.cpp  Tree.cpp  Wall.cpp
src/pokemaze/models/scene/: Floor.cpp  Garage.cpp  Sky.cpp
src/pokemaze/util/algebra/: Bezier.cpp  Matrices.cpp
src/pokemaze/util/io/: IOUtils.cpp
src/wniemiec/io/consolex/: Consolex.cpp  HistoryConsolex.cpp  InputConsolex.cpp  LogLevel.cpp  LogMessage.cpp  LoggerConsolex.cpp  OutputConsolex.cpp
src/wniemiec/util/data/: StringUtils.cpp
src/wniemiec/util/task/: Scheduler.cpp
